package hearts;

option java_package = "org.bitcoma.hearts.model.transfered";
option java_outer_classname = "JoinGameProtos";
option optimize_for = SPEED;

import "Game.proto";

message JoinGameRequest {

    optional uint64 game_id = 1;

}

message JoinGameResponse {

	optional GameInfo game_info = 1;

}