package hearts;

option java_package = "org.bitcoma.hearts.model.transfered";
option java_outer_classname = "LoginProtos";
option optimize_for = SPEED;

import "GenericResponse.proto";

message LoginRequest {

    optional string email = 1;
    optional string password = 2;

}

message LoginResponse {

	optional uint64 user_id = 1;

}